# electrophorus

./: .gitignore  CMakeLists.txt  README.md  flash.sh  install.sh  mbed_app.json5  mbed_app_debug.json5  mbed_app_release.json5  openocd.cfg
docs/: Carvera_Air_CA1.md  Carvera_C1.md  EEPROM.md  Proxxon_PD250E_Lathe.md
drivers/comms/: comms.cpp
include/: machine_definitions.h  machinedef_types.h  protocol_definitions.h  spi_data.h
lib/MODDMA/: CMakeLists.txt  MODDMA.cpp  MODDMA.h
linuxcnc/config/carvera/: README  carvera_air_3axis.hal  carvera_air_3axis.ini  lathe.ini  tool.tbl
linuxcnc/config/carvera/lib/: common.inc  common.ini  rotary_axis.inc  xyz.inc
linuxcnc/config/carvera/lib/hal/: axes.hal  common.hal  core.hal  fan_control.hal  io.hal  postamble.hal  postgui.hal  probing.hal  rotary_axis.hal  spindle.hal  xhc_whb04b_6.hal  xyz.hal
linuxcnc/config/proxxarvera/: README.md  proxxarvera.ini
linuxcnc/config/proxxarvera/hal/: axes.hal  core.hal  postamble.hal
linuxcnc/driver/: dtcboards.h  electrophorus.c  level_map.comp  machine_definitions.h  machine_types.h  machinedef_types.h  metrics.c  probe_helper.comp  probe_input_switch.comp  protocol_definitions.h  spi_data.h
linuxcnc/hal_comps/: .clang-format  CMakeLists.txt  build_and_install.sh  electrophorus.c  electrophorus.cc  electrophorus.cpp  electrophorus.h  electrophorus.hpp  probe_helper.comp  tmc2209_config.py
linuxcnc/hal_comps/machines/carvera_air/: machine_config.cc  machine_definitions.h
linuxcnc/hal_comps/machines/proxxarvera/: machine_config.cc  machine_definitions.h
linuxcnc/hal_comps/spi/: rpi4_spi.c  rpi4_spi_driver.cc  rpi4_spi_driver.cpp  rpi4_spi_driver.h  rpi4_spi_driver.hpp  rpi5_spi.c  rpi5_spi_driver.cc  rpi5_spi_driver.cpp  rpi5_spi_driver.h  rpi5_spi_driver.hpp  spi_driver.cc  spi_driver.cpp  spi_driver.h
linuxcnc/hal_comps/spi_protocol/: machine_definitions.h  machinedef_types.h  spi_protocol.h
linuxcnc/hal_comps/stepgen/: stepgen.cc  stepgen.cpp  stepgen.h  stepgen.hpp
linuxcnc/pi_init/: 01-apt.sh  01_init.sh  02-kernel.sh  02a_headless.sh  03-xfce.sh  04-vnc.sh  05-openocd.sh  06-linuxcnc.sh  07-linuxcnc-user.sh  08-firmware-user.sh  09-samba.sh
modules/adc/: adc.h
modules/pwm/: pwm.cpp  pwm.h
src/: console_override.cpp  crash_handler.cpp  epho_crc32.h  irq_ticker.cpp  irq_ticker.h  lpc_timer.cpp  lpc_timer.h  machine_config.cc  machine_config.cpp  machine_config.h  machine_definitions.h  machinedef_types.h  main.cc  main.cpp  module.cpp  module.h  pin.cc  pin.h  pru_thread.cpp  pru_thread.h  rx_listener.cc  rx_listener.cpp  rx_listener.h  serial_comms.cpp  serial_comms.h  spi_comms.cc  spi_comms.cpp  spi_comms.h  spi_protocol.h  stepgen_ticker.cc  stepgen_ticker.cpp  stepgen_ticker.h
src/dma/: dma.cc  dma.h
src/modules/: module.h
src/modules/adc/: adc.cc  adc.cpp  adc.h
src/modules/e_stop/: e_stop.cc  e_stop.cpp  e_stop.h
src/modules/gpio/: digitalIns.cpp  digitalIns.h  digitalOuts.h  digital_ins.cc  digital_ins.cpp  digital_ins.h  digital_outs.cc  digital_outs.cpp  digital_outs.h  pulse_counter.cc  pulse_counter.cpp  pulse_counter.h
src/modules/pulse_counter/: pulse_counter.cpp
src/modules/pwm/: pwm.cc  pwm.cpp  pwm.h
src/modules/quadrature_encoder/: quadrature_encoder.cc  quadrature_encoder.h
src/modules/stepgen/: stepgen.cc  stepgen.cpp  stepgen.h
src/modules/stepper/: fixed32_32.h  stepper.cpp  stepper.h
